Corrected breadcrumbs height on mobile

--- a/public_html/layouts/basic/styles/layout/_Header.scss
+++ b/public_html/layouts/basic/styles/layout/_Header.scss
@@ -397,7 +397,10 @@
 
 //breadcrumbs
 .o-breadcrumb {
-	min-height: calculate-rem(48px);
+	@include media-breakpoint-up(sm) {
+		min-height: calculate-rem(48px);
+	}
+	min-height: calculate-rem(32px);
 	&__container {
 		width: 100%;
 		display: flex;
