--- a/public_html/layouts/basic/styles/libraries/_Bootstrap.scss
+++ b/public_html/layouts/basic/styles/libraries/_Bootstrap.scss
@@ -142,12 +142,13 @@ label.btn[class*="btn-outline-"] {
 		@extend .form-control-sm;
 	}
 }
-.breadcrumb-item + .breadcrumb-item {
-	@include media-breakpoint-down(sm) {
-		padding-left: calculate-rem(2px);
+@include media-breakpoint-down(sm) {
+	.breadcrumb {
+		padding: 0;
 	}
-	&::before {
-		@include media-breakpoint-down(sm) {
+	.breadcrumb-item + .breadcrumb-item {
+		padding-left: calculate-rem(2px);
+		&::before {
 			padding-right: calculate-rem(2px);
 		}
 	}
